--- a/DragonTacticsSheet.html
+++ b/DragonTacticsSheet.html
@@ -1,4 +1,4 @@
-<input type="hidden" name="attr_Version" value="3.3" />
+<input type="hidden" name="attr_Version" value="3.3.1" />
 
 <div class="main">
     <div class="header section">
@@ -973,7 +973,7 @@
                     <button
                         type="roll"
                         name="roll_Standard-Attack"
-                        value="&{template:attack} {{name=@{Standard-Name}}} {{RangeTargets=@{Standard-RangeTargets}}} {{attack=[[1d20 @{Standard-HitBonus}]]}} {{attackadv=[[1d20 @{Standard-HitBonus}]]} {{edge=[[1d4}}} {{defense=@{Standard-DefSelect}}}"
+                        value="&{template:attack} {{name=@{Standard-Name}}} {{RangeTargets=@{Standard-RangeTargets}}} {{attack=[[1d20 @{Standard-HitBonus}]]}} {{attackadv=[[1d20 @{Standard-HitBonus}]]}} {{edge=[[1d4]]}} {{defense=@{Standard-DefSelect}}}"
                     ></button>
                     <span name="attr_Standard-HitBonus" value="+0"></span>
                     vs.
@@ -1130,7 +1130,7 @@
                     <button
                         type="roll"
                         name="roll_Move-Attack"
-                        value="&{template:attack} {{name=@{Move-Name}}} {{RangeTargets=@{Move-RangeTargets}}} {{attack=[[1d20 @{Move-HitBonus}]]}} {{attackadv=[[1d20 @{Move-HitBonus}]]}} {{defense=@{Move-DefSelect}} {{edge=[[1d4}}}"
+                        value="&{template:attack} {{name=@{Move-Name}}} {{RangeTargets=@{Move-RangeTargets}}} {{attack=[[1d20 @{Move-HitBonus}]]}} {{attackadv=[[1d20 @{Move-HitBonus}]]}} {{defense=@{Move-DefSelect}}} {{edge=[[1d4]]}}"
                     ></button>
                     <span name="attr_Move-HitBonus" value="+0"></span>
                     vs.
@@ -1279,7 +1279,7 @@
                     <button
                         type="roll"
                         name="roll_Minor-Attack"
-                        value="&{template:attack} {{name=@{Minor-Name}}} {{RangeTargets=@{Minor-RangeTargets}}} {{attack=[[1d20 @{Minor-HitBonus}]]}} {{attackadv=[[1d20 @{Minor-HitBonus}]]}} {{defense=@{Minor-DefSelect}} {{edge=[[1d4}}}"
+                        value="&{template:attack} {{name=@{Minor-Name}}} {{RangeTargets=@{Minor-RangeTargets}}} {{attack=[[1d20 @{Minor-HitBonus}]]}} {{attackadv=[[1d20 @{Minor-HitBonus}]]}} {{defense=@{Minor-DefSelect}}} {{edge=[[1d4]]}}"
                     ></button>
                     <span name="attr_Minor-HitBonus" value="+0"></span>
                     vs.
@@ -1440,7 +1440,7 @@
                     <button
                         type="roll"
                         name="roll_Reaction-Attack"
-                        value="&{template:attack} {{name=@{Reaction-Name}}} {{RangeTargets=@{Reaction-RangeTargets}}} {{attack=[[1d20 @{Reaction-HitBonus}]]}} {{attackadv=[[1d20 @{Reaction-HitBonus}]]}} {{defense=@{Reaction-DefSelect}} {{edge=[[1d4}}}"
+                        value="&{template:attack} {{name=@{Reaction-Name}}} {{RangeTargets=@{Reaction-RangeTargets}}} {{attack=[[1d20 @{Reaction-HitBonus}]]}} {{attackadv=[[1d20 @{Reaction-HitBonus}]]}} {{defense=@{Reaction-DefSelect}}} {{edge=[[1d4]]}}"
                     ></button>
                     <span name="attr_Reaction-HitBonus" value="+0"></span>
                     vs.
