--- a/DragonTacticsSheet.html
+++ b/DragonTacticsSheet.html
@@ -65,7 +65,7 @@
                     class="sheet-arrow"
                 />
                 <div class="body">
-                    <select name="attr_Athletics-Train" class="sheet-Training">
+                    <select name="attr_Athletics-Train" class="sheet-Training" value="0">
                         <option value="0">Untrained</option>
                         <option value="2">Adept</option>
                         <option value="4">Trained</option>
@@ -123,7 +123,7 @@
                     class="sheet-arrow"
                 />
                 <div class="body">
-                    <select name="attr_Endurance-Train" class="sheet-Training">
+                    <select name="attr_Endurance-Train" class="sheet-Training" value="0">
                         <option value="0">Untrained</option>
                         <option value="2">Adept</option>
                         <option value="4">Trained</option>
@@ -182,7 +182,7 @@
                         class="sheet-arrow"
                     />
                     <div class="body">
-                        <select name="attr_Acrobatics-Train" class="sheet-Training">
+                        <select name="attr_Acrobatics-Train" class="sheet-Training" value="0">
                             <option value="0">Untrained</option>
                             <option value="2">Adept</option>
                             <option value="4">Trained</option>
@@ -224,7 +224,7 @@
                         class="sheet-arrow"
                     />
                     <div class="body">
-                        <select name="attr_Stealth-Train" class="sheet-Training"> 
+                        <select name="attr_Stealth-Train" class="sheet-Training" value="0"> 
                             <option value="0">Untrained</option>
                             <option value="2">Adept</option>
                             <option value="4">Trained</option>
@@ -266,7 +266,7 @@
                         class="sheet-arrow"
                     />
                     <div class="body">
-                        <select name="attr_SleightofHand-Train" class="sheet-Training">
+                        <select name="attr_SleightofHand-Train" class="sheet-Training" value="0">
                             <option value="0">Untrained</option>
                             <option value="2">Adept</option>
                             <option value="4">Trained</option>
@@ -326,7 +326,7 @@
                         class="sheet-arrow"
                     />
                     <div class="body">
-                        <select name="attr_Arcana-Train" class="sheet-Training">
+                        <select name="attr_Arcana-Train" class="sheet-Training" value="0">
                             <option value="0">Untrained</option>
                             <option value="2">Adept</option>
                             <option value="4">Trained</option>
@@ -368,7 +368,7 @@
                         class="sheet-arrow"
                     />
                     <div class="body">
-                        <select name="attr_Debate-Train" class="sheet-Training">
+                        <select name="attr_Debate-Train" class="sheet-Training" value="0">
                             <option value="0">Untrained</option>
                             <option value="2">Adept</option>
                             <option value="4">Trained</option>
@@ -410,7 +410,7 @@
                         class="sheet-arrow"
                     />
                     <div class="body">
-                        <select name="attr_Repair-Train" class="sheet-Training">
+                        <select name="attr_Repair-Train" class="sheet-Training" value="0">
                             <option value="0">Untrained</option>
                             <option value="2">Adept</option>
                             <option value="4">Trained</option>
@@ -452,7 +452,7 @@
                         class="sheet-arrow"
                     />
                     <div class="body">
-                        <select name="attr_Research-Train" class="sheet-Training">
+                        <select name="attr_Research-Train" class="sheet-Training" value="0">
                             <option value="0">Untrained</option>
                             <option value="2">Adept</option>
                             <option value="4">Trained</option>
@@ -512,7 +512,7 @@
                         class="sheet-arrow"
                     />
                     <div class="body">
-                        <select name="attr_HandleAnimal-Train" class="sheet-Training">
+                        <select name="attr_HandleAnimal-Train" class="sheet-Training" value="0">
                             <option value="0">Untrained</option>
                             <option value="2">Adept</option>
                             <option value="4">Trained</option>
@@ -554,7 +554,7 @@
                         class="sheet-arrow"
                     />
                     <div class="body">
-                        <select name="attr_Insight-Train" class="sheet-Training">
+                        <select name="attr_Insight-Train" class="sheet-Training" value="0">
                             <option value="0">Untrained</option>
                             <option value="2">Adept</option>
                             <option value="4">Trained</option>
@@ -596,7 +596,7 @@
                         class="sheet-arrow"
                     />
                     <div class="body">
-                        <select name="attr_Medicine-Train" class="sheet-Training">
+                        <select name="attr_Medicine-Train" class="sheet-Training" value="0">
                             <option value="0">Untrained</option>
                             <option value="2">Adept</option>
                             <option value="4">Trained</option>
@@ -638,7 +638,7 @@
                         class="sheet-arrow"
                     />
                     <div class="body">
-                        <select name="attr_Perception-Train" class="sheet-Training">
+                        <select name="attr_Perception-Train" class="sheet-Training" value="0">
                             <option value="0">Untrained</option>
                             <option value="2">Adept</option>
                             <option value="4">Trained</option>
@@ -680,7 +680,7 @@
                         class="sheet-arrow"
                     />
                     <div class="body">
-                        <select name="attr_Survival-Train" class="sheet-Training">
+                        <select name="attr_Survival-Train" class="sheet-Training" value="0">
                             <option value="0">Untrained</option>
                             <option value="2">Adept</option>
                             <option value="4">Trained</option>
@@ -740,7 +740,7 @@
                         class="sheet-arrow"
                     />
                     <div class="body">
-                        <select name="attr_Appeal-Train" class="sheet-Training">
+                        <select name="attr_Appeal-Train" class="sheet-Training" value="0">
                             <option value="0">Untrained</option>
                             <option value="2">Adept</option>
                             <option value="4">Trained</option>
@@ -782,7 +782,7 @@
                         class="sheet-arrow"
                     />
                     <div class="body">
-                        <select name="attr_Impress-Train" class="sheet-Training">
+                        <select name="attr_Impress-Train" class="sheet-Training" value="0">
                             <option value="0">Untrained</option>
                             <option value="2">Adept</option>
                             <option value="4">Trained</option>
@@ -824,7 +824,7 @@
                         class="sheet-arrow"
                     />
                     <div class="body">
-                        <select name="attr_Socialize-Train" class="sheet-Training">
+                        <select name="attr_Socialize-Train" class="sheet-Training" value="0">
                             <option value="0">Untrained</option>
                             <option value="2">Adept</option>
                             <option value="4">Trained</option>
