--- a/DragonTacticsSheet.html
+++ b/DragonTacticsSheet.html
@@ -65,8 +65,8 @@
                     class="sheet-arrow"
                 />
                 <div class="body">
-                    <select name="attr_Athletics-Train" class="sheet-Training" value="0">
-                        <option value="0">Untrained</option>
+                    <select name="attr_Athletics-Train" class="sheet-Training">
+                        <option value="0" selected>Untrained</option>
                         <option value="2">Adept</option>
                         <option value="4">Trained</option>
                         <option value="6">Experienced</option>
@@ -123,8 +123,8 @@
                     class="sheet-arrow"
                 />
                 <div class="body">
-                    <select name="attr_Endurance-Train" class="sheet-Training" value="0">
-                        <option value="0">Untrained</option>
+                    <select name="attr_Endurance-Train" class="sheet-Training">
+                        <option value="0" selected>Untrained</option>
                         <option value="2">Adept</option>
                         <option value="4">Trained</option>
                         <option value="6">Experienced</option>
@@ -182,8 +182,8 @@
                         class="sheet-arrow"
                     />
                     <div class="body">
-                        <select name="attr_Acrobatics-Train" class="sheet-Training" value="0">
-                            <option value="0">Untrained</option>
+                        <select name="attr_Acrobatics-Train" class="sheet-Training">
+                            <option value="0" selected>Untrained</option>
                             <option value="2">Adept</option>
                             <option value="4">Trained</option>
                             <option value="6">Experienced</option>
@@ -224,8 +224,8 @@
                         class="sheet-arrow"
                     />
                     <div class="body">
-                        <select name="attr_Stealth-Train" class="sheet-Training" value="0"> 
-                            <option value="0">Untrained</option>
+                        <select name="attr_Stealth-Train" class="sheet-Training"> 
+                            <option value="0" selected>Untrained</option>
                             <option value="2">Adept</option>
                             <option value="4">Trained</option>
                             <option value="6">Experienced</option>
@@ -266,8 +266,8 @@
                         class="sheet-arrow"
                     />
                     <div class="body">
-                        <select name="attr_SleightofHand-Train" class="sheet-Training" value="0">
-                            <option value="0">Untrained</option>
+                        <select name="attr_SleightofHand-Train" class="sheet-Training">
+                            <option value="0" selected>Untrained</option>
                             <option value="2">Adept</option>
                             <option value="4">Trained</option>
                             <option value="6">Experienced</option>
@@ -326,8 +326,8 @@
                         class="sheet-arrow"
                     />
                     <div class="body">
-                        <select name="attr_Arcana-Train" class="sheet-Training" value="0">
-                            <option value="0">Untrained</option>
+                        <select name="attr_Arcana-Train" class="sheet-Training">
+                            <option value="0" selected>Untrained</option>
                             <option value="2">Adept</option>
                             <option value="4">Trained</option>
                             <option value="6">Experienced</option>
@@ -368,8 +368,8 @@
                         class="sheet-arrow"
                     />
                     <div class="body">
-                        <select name="attr_Debate-Train" class="sheet-Training" value="0">
-                            <option value="0">Untrained</option>
+                        <select name="attr_Debate-Train" class="sheet-Training">
+                            <option value="0" selected>Untrained</option>
                             <option value="2">Adept</option>
                             <option value="4">Trained</option>
                             <option value="6">Experienced</option>
@@ -410,8 +410,8 @@
                         class="sheet-arrow"
                     />
                     <div class="body">
-                        <select name="attr_Repair-Train" class="sheet-Training" value="0">
-                            <option value="0">Untrained</option>
+                        <select name="attr_Repair-Train" class="sheet-Training">
+                            <option value="0" selected>Untrained</option>
                             <option value="2">Adept</option>
                             <option value="4">Trained</option>
                             <option value="6">Experienced</option>
@@ -452,8 +452,8 @@
                         class="sheet-arrow"
                     />
                     <div class="body">
-                        <select name="attr_Research-Train" class="sheet-Training" value="0">
-                            <option value="0">Untrained</option>
+                        <select name="attr_Research-Train" class="sheet-Training">
+                            <option value="0" selected>Untrained</option>
                             <option value="2">Adept</option>
                             <option value="4">Trained</option>
                             <option value="6">Experienced</option>
@@ -512,8 +512,8 @@
                         class="sheet-arrow"
                     />
                     <div class="body">
-                        <select name="attr_HandleAnimal-Train" class="sheet-Training" value="0">
-                            <option value="0">Untrained</option>
+                        <select name="attr_HandleAnimal-Train" class="sheet-Training">
+                            <option value="0" selected>Untrained</option>
                             <option value="2">Adept</option>
                             <option value="4">Trained</option>
                             <option value="6">Experienced</option>
@@ -554,8 +554,8 @@
                         class="sheet-arrow"
                     />
                     <div class="body">
-                        <select name="attr_Insight-Train" class="sheet-Training" value="0">
-                            <option value="0">Untrained</option>
+                        <select name="attr_Insight-Train" class="sheet-Training">
+                            <option value="0" selected>Untrained</option>
                             <option value="2">Adept</option>
                             <option value="4">Trained</option>
                             <option value="6">Experienced</option>
@@ -596,8 +596,8 @@
                         class="sheet-arrow"
                     />
                     <div class="body">
-                        <select name="attr_Medicine-Train" class="sheet-Training" value="0">
-                            <option value="0">Untrained</option>
+                        <select name="attr_Medicine-Train" class="sheet-Training">
+                            <option value="0" selected>Untrained</option>
                             <option value="2">Adept</option>
                             <option value="4">Trained</option>
                             <option value="6">Experienced</option>
@@ -638,8 +638,8 @@
                         class="sheet-arrow"
                     />
                     <div class="body">
-                        <select name="attr_Perception-Train" class="sheet-Training" value="0">
-                            <option value="0">Untrained</option>
+                        <select name="attr_Perception-Train" class="sheet-Training">
+                            <option value="0" selected>Untrained</option>
                             <option value="2">Adept</option>
                             <option value="4">Trained</option>
                             <option value="6">Experienced</option>
@@ -680,8 +680,8 @@
                         class="sheet-arrow"
                     />
                     <div class="body">
-                        <select name="attr_Survival-Train" class="sheet-Training" value="0">
-                            <option value="0">Untrained</option>
+                        <select name="attr_Survival-Train" class="sheet-Training">
+                            <option value="0" selected>Untrained</option>
                             <option value="2">Adept</option>
                             <option value="4">Trained</option>
                             <option value="6">Experienced</option>
@@ -740,8 +740,8 @@
                         class="sheet-arrow"
                     />
                     <div class="body">
-                        <select name="attr_Appeal-Train" class="sheet-Training" value="0">
-                            <option value="0">Untrained</option>
+                        <select name="attr_Appeal-Train" class="sheet-Training">
+                            <option value="0" selected>Untrained</option>
                             <option value="2">Adept</option>
                             <option value="4">Trained</option>
                             <option value="6">Experienced</option>
@@ -782,8 +782,8 @@
                         class="sheet-arrow"
                     />
                     <div class="body">
-                        <select name="attr_Impress-Train" class="sheet-Training" value="0">
-                            <option value="0">Untrained</option>
+                        <select name="attr_Impress-Train" class="sheet-Training">
+                            <option value="0" selected>Untrained</option>
                             <option value="2">Adept</option>
                             <option value="4">Trained</option>
                             <option value="6">Experienced</option>
@@ -824,8 +824,8 @@
                         class="sheet-arrow"
                     />
                     <div class="body">
-                        <select name="attr_Socialize-Train" class="sheet-Training" value="0">
-                            <option value="0">Untrained</option>
+                        <select name="attr_Socialize-Train" class="sheet-Training">
+                            <option value="0" selected>Untrained</option>
                             <option value="2">Adept</option>
                             <option value="4">Trained</option>
                             <option value="6">Experienced</option>
@@ -1699,7 +1699,7 @@
             >
             <span class="sheet-AttSelect-AC">
                 <select name="attr_AC-Att">
-                    <option value="0">None (Heavy Armor)</option>
+                    <option value="0" selected>None (Heavy Armor)</option>
                     <option value="1">Strength</option>
                     <option value="2">Constitution</option>
                     <option value="3">Dexterity</option>
