--- a/DragonTacticsSheet.html
+++ b/DragonTacticsSheet.html
@@ -1,4 +1,4 @@
-<input type="hidden" name="attr_Version" value="3.3.1" />
+<input type="hidden" name="attr_Version" value="3.4" />
 
 <div class="main">
     <div class="header section">
@@ -927,7 +927,7 @@
             class="sheet-diceInput"
         />
         <input type="hidden" value="1d4" name="attr_strikercrit" />
-        <h3>Power Points</h3>
+        <h3>Source Pool</h3>
         <input type="number" value="0" name="attr_PowerPoints" /> /
         <input type="number" value="0" name="attr_PowerPoints_max" />
         <h3>Persistent Effects</h3>
@@ -1736,6 +1736,8 @@
     <div class="money section">
         <h2>Currency</h2>
         <span name="attr_Currency" value="0 gp" style="font-size: 140%"></span>
+		<label><input type="number" name="attr_Diamond" /> Astral Diamonds</label>
+        <label><input type="number" name="attr_Sunstone" /> Lammanian Sunstones</label>
         <label><input type="number" name="attr_Platinum" /> Platinum Dragons</label>
         <label><input type="number" name="attr_Gold" /> Gold Galifars</label>
         <label><input type="number" name="attr_Silver" /> Silver Sovereigns</label>
