Steps for space

--- a/DragonTacticsSheet.html
+++ b/DragonTacticsSheet.html
@@ -1094,7 +1094,7 @@
             <input type="number" name="attr_OnPersonItem-Quantity" value="0" min="0">
             <input type="checkbox" name="attr_OnPerson-toggle" class="sheet-arrow">
             <div class="sheet-body">
-                <label><input type="number" name="attr_OnPersonItem-Space" value="0" /> Space (per)</label>
+                <label><input type="number" name="attr_OnPersonItem-Space" value="0" step="0.25"/> Space (per)</label>
                 <label>
                     Description
                     <textarea name="attr_OnPersonItem-description"></textarea>
@@ -1107,7 +1107,7 @@
             <input type="number" name="attr_HomeItem-Quantity" value="0" min="0">
             <input type="checkbox" name="attr_Home-toggle" class="sheet-arrow">
             <div class="sheet-body">
-                <label><input type="number" name="attr_HomeItem-Space" value="0" /> Space (per)</label>
+                <label><input type="number" name="attr_HomeItem-Space" value="0" step="0.25"/> Space (per)</label>
                 <label>
                     Description
                     <textarea name="attr_HomeItem-description"></textarea>
